--- a/heloisa.css
+++ b/heloisa.css
@@ -1,16 +1,24 @@
 .cabecalho
 { 
-background:color #383d58;
-color:white
+background:color #c4caf1;
 }
 h1 {
     text-align: center;
 } 
 h2 {
-    background-color: blueviolet;
+    background-color: rgb(113, 114, 156);
 }
 .imagem {
     width: 20px
+}
+P {
+    font-size: 18px
+}
+.paragrafo1{ 
+    font-size: 30px;
+}
+.paragrafos {
+    font-size: 16px;
 }
 .lista{ 
     display: inline-block;
