--- a/heloisa.css
+++ b/heloisa.css
@@ -1,26 +1,48 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 .cabecalho
 { 
-background:color #c4caf1;
+background-color: #687A86 ;
+color: white;
+display: flex;
+justify-content: space-around;
+
 }
-h1 {
-    text-align: center;
-} 
-h2 {
-    background-color: rgb(113, 114, 156);
-}
-.imagem {
-    width: 20px
-}
-P {
-    font-size: 18px
-}
-.paragrafo1{ 
-    font-size: 30px;
-}
-.paragrafos {
-    font-size: 16px;
-}
-.lista{ 
+.cabecalho-lista-item
+{
     display: inline-block;
-    margin: 0 16px;
+margin: 16px;
+font-size: 20px;
+
+}
+.imagem1
+{
+    width: 25%;
+  
+}
+
+.Curso
+{
+background-image: linear-gradient(#687A86,white);
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 40px 0 ;
+}
+
+.curso-conteudo { 
+width: 35%;
+}
+.cabecalho-imagem {
+    width: 200px
+}
+
+.paragrafo{ 
+    font-size: 20px;
+    color: white 
+}
+.curso-titulo{
+    color: white
 }
