--- a/style.css
+++ b/style.css
@@ -18,13 +18,9 @@ margin: 16px;
 font-size: 20px;
 font-family: 'Poppins', sans-serif;
 }
-.imagem1
-{
+.imagem1 {
     width: 25%;
 }
-
-.Curso
-{
 background-image: linear-gradient( #687A86,rgb(156, 166, 250));
 display: flex;
 justify-content: center;
