--- a/style.css
+++ b/style.css
@@ -37,6 +37,13 @@ width: 35%;
     width: 200px
 }
 
+@media screen and (min-width:1728px){
+    .container__link{
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color:var(--preto);
+    }
 .paragrafo{ 
     font-size: 15px;
     color: white;
