--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ font-family: 'Poppins', sans-serif;
 .imagem1 {
     width: 25%;
 }
-
+.curso-conteudo {
 background-image: linear-gradient( #687A86,rgb(156, 166, 250));
 display: flex;
 justify-content: center;
